add proxy tab and hadoop question

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -46,6 +46,14 @@
     </li> <!-- .nav-item -->
     {% endfor %}
 
+    <!-- Proxy tab -->
+    <li class="nav-item{% if page.layout == 'proxy' %}{{ " active" }}{% endif %}">
+      <a href="https://www.webshare.io/?referral_code=ttjajplnrle1" class="nav-link" target="_blank">
+        <i class="fa-fw fas fa-link ml-xl-3 mr-xl-3 unloaded"></i>
+        <span>{{ "PROXY" }}</span>
+      </a>
+    </li>
+
   </ul> <!-- ul.nav.flex-column -->
 
   <div class="sidebar-bottom mt-auto d-flex flex-wrap justify-content-center">
