--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -47,12 +47,12 @@
     {% endfor %}
 
     <!-- Proxy tab -->
-    <li class="nav-item{% if page.layout == 'proxy' %}{{ " active" }}{% endif %}">
+    <!-- <li class="nav-item{% if page.layout == 'proxy' %}{{ " active" }}{% endif %}">
       <a href="https://www.webshare.io/?referral_code=ttjajplnrle1" class="nav-link" target="_blank">
         <i class="fa-fw fas fa-link ml-xl-3 mr-xl-3 unloaded"></i>
         <span>{{ "PROXY" }}</span>
       </a>
-    </li>
+    </li> -->
 
   </ul> <!-- ul.nav.flex-column -->
 
